[package]
name = "embedded-graphics-transform"
version = "0.1.0"
edition = "2021"
authors = [
    "Jeremy Fitzhardinge <jeremy@goop.org>",
]
keywords = ["embedded", "graphics", "no-std"]
categories = ["embedded", "graphics", "no-std"]
repository = "https://github.com/jsgf/embedded-graphics-transform.git"
license = "MIT OR Apache-2.0"
description = "Simple coordinate transforms for embedded display drivers"
readme = "README.md"

[dependencies]
embedded-graphics-core = "0.3.3"

[dev-dependencies]
embedded-graphics = "0.7"